--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,19 +26,43 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <a class="col-xs-12 header_back" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <a class="col-xs-12 header_back" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
 
         <div class="row artist_text">
-            <div class="col-xs-2 artist_container"><img src="../img/djs/hardwell.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Text wall of text</div>
+            <div class="col-xs-2 artist_container"><img src="../img/djs/alesso.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container"><label>Alesso</label><img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
-            <div class="col-xs-10 artist_container">Text wall of text</div>
+            <div class="col-xs-10 artist_container">Steve Aoki</div>
         </div>
         <div class="row artist_text">
-            <div class="col-xs-2 artist_container"><img src="../img/djs/romero.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Text wall of text</div>
+            <div class="col-xs-2 artist_container"><img src="../img/djs/armin.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Armin Van Buuren</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/axwell.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Axwell Λ Ingrosso</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/deorro.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Deorro</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/knifeparty.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Knife Party</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/showtek.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Showtek</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/tiesto.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Tiesto</div>
+        </div>
+        <div class="row artist_text">
+            <div class="col-xs-2 artist_container"><img src="../img/djs/zedd.jpg" class="artist_img"/> </div>
+            <div class="col-xs-10 artist_container">Zedd</div>
         </div>
     </div>
 
