--- a/sites/artists.html
+++ b/sites/artists.html
@@ -30,39 +30,39 @@
 
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/alesso.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container"><label>Alesso</label><img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            <div class="col-xs-10 artist_container">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
-            <div class="col-xs-10 artist_container">Steve Aoki</div>
+            <div class="col-xs-10 artist_container">Steve Aoki<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/armin.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Armin Van Buuren</div>
+            <div class="col-xs-10 artist_container">Armin Van Buuren<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/axwell.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Axwell Λ Ingrosso</div>
+            <div class="col-xs-10 artist_container">Axwell Λ Ingrosso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/deorro.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Deorro</div>
+            <div class="col-xs-10 artist_container">Deorro<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/knifeparty.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Knife Party</div>
+            <div class="col-xs-10 artist_container">Knife Party<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/showtek.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Showtek</div>
+            <div class="col-xs-10 artist_container">Showtek<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/tiesto.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Tiesto</div>
+            <div class="col-xs-10 artist_container">Tiesto<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/zedd.jpg" class="artist_img"/> </div>
-            <div class="col-xs-10 artist_container">Zedd</div>
+            <div class="col-xs-10 artist_container">Zedd<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
     </div>
 
