--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,11 +26,12 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <a class="col-xs-12 header_back" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <a class="col-xs-12 header_back link" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
 
-        <div class="row artist_text">
+        <div class="row artist_text link"><a href="djs/alesso.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/alesso.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
