--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -27,17 +27,26 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col-xs-12 header_back link" onclick="history.go(-1);return true;">
+    <div class="row js" style="padding: 0px; margin: 0px">
+        <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
         </div>
 
     </div>
 
     <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
-
-
-</div>
+    <div class="text_shown" style="margin-top: 0px">Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
+        Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
+        Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
+        genommen. Besonders erfolgreich war Nillionaire. Seinen Durchbruch hatte Alesso 2011 mit seinem Remix des Liedes Pressure der pakistanischen Sängerin
+        Nadia Ali. Pressure wurde vielfach von bekannten DJs wie Armin van Buuren, Tiësto, Kaskade, Calvin
+        Harris und der Swedish House Mafia gespielt. Der Remix gewann ebenfalls den International Dance Music
+        Award als Best Progressive Track . 2012 folgte der nächste Hit Calling (Lose My Mind) in Zusammenarbeit mit Sebastian Ingrosso und dem OneRepublic
+        Frontman Ryan Tedder. Daraufhin veröffentlichte Alesso weitere Vocaltracks, wie Years mit Matthew Koma und City of Dreams mit Dirty South.
+        Im Frühjahr 2013 erschien sein Remix des Liedes If I Lose Myself von OneRepublic und er verhalf dem Lied wieder auf hohe Chartplatzierungen.
+        Gemeinsam mit dem britischen Dance-Pop-Duos Hurts und Calvin Harris produzierte er 2013 den Song Under Control. Der
+        Track verschaffte ihm hohe Chart-Platzierungen in sämtlichen europäischen Ländern.
+        Im Herbst 2014 kooperierte er mit der schwedischen Sängerin Tove Lo, woraus der Track Heroes entstand. </div>
 
 </body>
 
