--- a/sites/artists.html
+++ b/sites/artists.html
@@ -33,21 +33,25 @@
             <div class="col-xs-10 artist_container">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
             </a>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/aoki.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/aoki.jpg" class="artist_img"/></div>
             <div class="col-xs-10 artist_container">Steve Aoki<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/armin.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/armin.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Armin Van Buuren<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/axwell.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/axwell.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Axwell Λ Ingrosso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/deorro.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/deorro.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Deorro<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
         <div class="row artist_text">
             <div class="col-xs-2 artist_container"><img src="../img/djs/knifeparty.jpg" class="artist_img"/> </div>
@@ -57,13 +61,15 @@
             <div class="col-xs-2 artist_container"><img src="../img/djs/showtek.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Showtek<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/tiesto.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/tiesto.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Tiesto<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
-        <div class="row artist_text">
+        <div class="row artist_text"><a href="djs/zedd.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/zedd.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Zedd<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
+            </a>
         </div>
     </div>
 
