--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -35,7 +35,7 @@
     </div>
 
     <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
-    <div class="text_shown" style="margin-top: 0px">Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
+    <div class="artist_home">Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
         Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
         Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
         genommen. Besonders erfolgreich war Nillionaire. Seinen Durchbruch hatte Alesso 2011 mit seinem Remix des Liedes Pressure der pakistanischen Sängerin
