--- a/sites/djs/aoki.html
+++ b/sites/djs/aoki.html
@@ -34,7 +34,7 @@
 
     </div>
 
-    <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
+    <div><img src="../../img/djs/aoki_main.jpg" class="img-responsive"></div>
     <div class="artist_home">Steve Aoki stammt aus den USA und hat
         sich dem Genre Electro/Indie verschrieben. Bereits in seiner Zeit an der
         University of California gründete er sein eigenes Plattenlabel DIM MAK Records.
