gallery below clock food created

--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -33,6 +33,62 @@
             <b>Salzburgring, Austria</b>
         </div>
 
+        <div class="outer_slide">
+            <ul style="padding: 0px;">
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(1).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(2).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(3).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(4).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(5).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(6).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(7).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(8).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(9).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+                <li>
+                    <div class="inner">
+                        <img src="../img/gallery/gallery%20(10).jpg" class="gallery_height"/>
+                    </div>
+                </li>
+
+
+            </ul>
+        </div>
     </div>
 </body>
 
