--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,8 +26,11 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <a class="col-xs-12 header_back js" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
-
+        <a href="../index.html" class="js">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            </div>
+        </a>
         <div class="row artist_text"><a href="djs/alesso.html" style="color: #ffffff">
             <div class="col-xs-2 artist_container"><img src="../img/djs/alesso.jpg" class="artist_img"/> </div>
             <div class="col-xs-10 artist_container">Alesso<img src="../img/max/arrow_right.gif" class="arrow_right"/></div>
