--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -24,8 +24,12 @@
 
 <body>
     <div id="everything" class="content-info ">
-        <a class="col-xs-12 header_back js" href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
-            <img src="../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 60%; max-width: 400px"/>
+        <a href="../index.html" class="js">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            </div>
+        </a>
+        <img src="../img/max/clock.gif" class="clock_spinning" style="height: auto; width: 60%; max-width: 400px"/>
         <div class="clocktext">
             <div class="visible-sm visible-md visible-lg">Time until Electric Love 2015</div>
             <div class="clockbox" id="clock"></div>
