--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -25,16 +25,12 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
-        <div class="row" style="padding: 0px; margin: 0px">
-            <div class="col-xs-4 header_back js" onclick="history.go(-1);return true;">
-               <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
+
+        <a href="#" class="js">
+            <div class="header_div" onclick="history.go(-1);return true;">
+                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
             </div>
-            <div class="col-xs-4 header_back header_title" style="text-align: center">CAMPING</div>
-            <div class="col-xs-4 header_back"></div>
-
-        </div>
-
-
+        </a>
 
         <label class="collapse" for="rules" >Camping Rules<img class="plus_img" src="../../img/max/plus.gif"></label>
         <input id="rules" type="checkbox">
