--- a/sites/food.html
+++ b/sites/food.html
@@ -26,10 +26,16 @@
 <body>
 
 <div id="everything" class="content-info" style="padding: 5px; color: #ffffff">
-    <a class="col-xs-12 header_back js" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+    <a href="../index.html" class="js">
+        <div class="header_div">
+            <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+        </div>
+    </a>
+    <div class="food_text">    At Electric Love Festival we provide a lot of different kinds of food. Exquisite and extraordinary dishes from around the world and
+        specialties from the austrian kitchen.</div>
 
+    <div class="food_text">Wusel</div>
 
-    Hello
     <div class="outer_slide">
         <ul style="margin-top: 5px">
             <li>
