--- a/sites/information.html
+++ b/sites/information.html
@@ -26,8 +26,11 @@
 <body>
 
     <div id="everything" class="content-info">
-        <a class="col-xs-12 header_back js" href="../index.html"><img src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
-
+        <a href="../index.html" class="js">
+            <div class="header_div">
+                <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
+            </div>
+        </a>
 
         <div class="accordion vertical">
             <section id="socialMedia">
