--- a/sites/djs/axwell.html
+++ b/sites/djs/axwell.html
@@ -27,12 +27,11 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <div class="row js" style="padding: 0px; margin: 0px">
-        <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-            <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
+    <a href="#" class="js">
+        <div class="header_div" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
-
-    </div>
+    </a>
 
     <div><img src="../../img/djs/axwell_main.jpg" class="img-responsive"></div>
     <div class="artist_home">Axwell und Ingrosso sind ein schwedisches EDM-Duo,
