fadeout deleted fadein reduced to 550ms changes food.html

--- a/sites/food.html
+++ b/sites/food.html
@@ -31,77 +31,19 @@
             <img src="../img/max/arrow_left_home.gif" class="header_arrow_home"/>
         </div>
     </a>
-    <div class="food_text">    At Electric Love Festival we provide a lot of different kinds of food. Exquisite and extraordinary dishes from around the world and
+    <div class="food_text"> At Electric Love Festival we provide a lot of different kinds of food.
+        Exquisite and extraordinary dishes from around the world and
         specialties from the austrian kitchen.</div>
-
-    <div class="food_text">Wusel</div>
-
-    <div class="outer_slide">
+    <div class="food_slide">
         <ul style="margin-top: 5px">
             <li>
-               Hello
-            </li>
-            <li>
-              Hello
-            </li><li>
-            Hello
-        </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
+                <div class="inner">
+                    <img src="../img/gallery/gallery%20(1).jpg" class="food_img"/>
+                </div>
             </li>
         </ul>
     </div>
-    <div class="outer_slide">
-        <ul style="margin-top: 5px">
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li><li>
-            Hello
-        </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-            <li>
-                Hello
-            </li>
-        </ul>
-    </div>
+
 </div>
 
 </body>
