timetable icon changed, credits added

--- a/sites/information.html
+++ b/sites/information.html
@@ -74,7 +74,7 @@
                         onmouseover="this.src='../img/max/logo_name_lightblue.gif'"
                         onmouseout="this.src='../img/max/logo_name_black.gif'"/></a></p>
             </section>
-            <section id="contact">             <h2><a href="#contact">Contact</a></h2>
+            <section id="contact"><h2><a href="#contact">Contact</a></h2>
                 <p>Telephone: +43 (0)6245 71 990</p>
                 <p>Fax: +43 (0)6245 70 79 366</p>
                 <p>E-Mail: info@revolutionevent.com</p>
@@ -127,6 +127,16 @@
                         </li>
                     </ul>
                 </div>
+            </section>
+
+            <section id="credits"><h2><a href="#credits">Credits</a></h2>
+                <div style="font-size: 16px">Copyright © 2015 Revolution Event GmbH. All rights reserved.</div>
+                <hr style="color: #000000; margin-top: 5px; margin-bottom: 5px  ">
+                <div style="font-size: 16px">Icons made by
+                    <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from
+                    <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+                </div>
+
             </section>
 
         </div>
