artists social buttons added font changed

--- a/sites/djs/armin.html
+++ b/sites/djs/armin.html
@@ -27,13 +27,28 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
     <div><img src="../../img/djs/armin_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://www.arminvanbuuren.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+        <span><a href="https://www.facebook.com/arminvanbuuren"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+        </span>
+        <span><a href="https://www.youtube.com/user/arminvanbuuren"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent.
         Mittlerweile war Armin van Buuren 5 mal auf Platz 1 der DJ Mag Top 100, er ist der erste DJ,
         der dies geschafft hat. Aktuell belegt der Niederländer Platz 3.
