--- a/sites/djs/axwell.html
+++ b/sites/djs/axwell.html
@@ -27,13 +27,26 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
-
     <div><img src="../../img/djs/axwell_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://www.axwellingrosso.tv/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+        <span><a href="https://www.facebook.com/axwellingrosso"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+       <span><a href="https://soundcloud.com/axwellingrossos"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Axwell und Ingrosso sind ein schwedisches EDM-Duo,
         welches der Swedish House Mafia entstammt. 2014 gaben Axwell^Ingrosso ihre
         Debüt-Performance beim Governors Ball Music Festival in New York City.
