--- a/sites/djs/deorro.html
+++ b/sites/djs/deorro.html
@@ -27,13 +27,31 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
     <div><img src="../../img/djs/deorro_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://www.deorro.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+        <span><a href="https://www.facebook.com/Deorro"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+       <span><a href="https://soundcloud.com/deorro"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/deorroTV"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Deorro ist ein US-amerikanischer House-DJ aus Los Angeles.
         Mit 14 Jahren begann er als DJ und einige Jahre später fing er an, eigene Tracks zu
         produzieren. Deorro arbeitete danach mit zahlreichen bekannten Szenegrößen zusammen
