--- a/sites/djs/tiesto.html
+++ b/sites/djs/tiesto.html
@@ -27,13 +27,31 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
     <div><img src="../../img/djs/tiesto_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://tiesto.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+        <span><a href="https://www.facebook.com/tiesto"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+       <span><a href="https://soundcloud.com/tiesto"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/officialtiesto"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Tiesto ist ein niederländischer DJ und Musikproduzent und sein großer Durchbruch
         kam im Jahr 2000 mit dem Remix von Deleriums Silence. 2001 kam sein Debütalbum In My Memory
         auf den Markt. Das Album war ein großer Erfolg, auch in den USA.
