--- a/sites/djs/zedd.html
+++ b/sites/djs/zedd.html
@@ -27,13 +27,29 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
     <div><img src="../../img/djs/zedd_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://www.zedd.net/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+
+        <span><a href="https://www.facebook.com/Zedd"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+
+       <span><a href="https://soundcloud.com/zedd"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Zedd ist ein russisch-deutscher Musikproduzent und DJ
         es Electro House und Dubstep. Den größten Erfolg hatte er bisher 2014 mit seiner Single
         Clarity, die die Top Ten der US-Charts erreichte und mit einem Grammy ausgezeichnet wurde.
