--- a/sites/information.html
+++ b/sites/information.html
@@ -35,16 +35,16 @@
         <div class="accordion vertical">
             <section id="socialMedia">
                 <h2><a href="#socialMedia">Social Media</a></h2>
-                <p>Visit us on:</p>
+                <p style="font-family: elfFont">Visit us on:</p>
                 <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"
-                      onmouseover="this.src='../img/max/youtube_hover.gif'"
-                      onmouseout="this.src='../img/max/youtube.gif'"/></a> </span>
+                      onmouseover="this.src='../img/social/youtube_hover.gif'"
+                      onmouseout="this.src='../img/social/youtube.gif'"/></a> </span>
                 <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"
-                      onmouseover="this.src='../img/max/twitter_hover.gif'"
-                      onmouseout="this.src='../img/max/twitter.gif'"/></a> </span>
+                      onmouseover="this.src='../img/social/twitter_hover.gif'"
+                      onmouseout="this.src='../img/social/twitter.gif'"/></a> </span>
                 <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"
-                      onmouseover="this.src='../img/max/facebook_hover.gif'"
-                      onmouseout="this.src='../img/max/facebook.gif'"/></a> </span>
+                      onmouseover="this.src='../img/social/facebook_hover.gif'"
+                      onmouseout="this.src='../img/social/facebook.gif'"/></a> </span>
             </section>
             <section id="faq">
                 <h2><a href="#faq">FAQ</a></h2>
@@ -69,15 +69,15 @@
             </section>
             <section id="homepage">
                 <h2><a href="#homepage">Homepage</a></h2>
-                <p>Stay tuned and checkout our homepage!</p>
+                <p style="font-family: elfFont">Stay tuned and checkout our homepage!</p>
                 <p><a href="https://electriclove.at"><img src="../img/max/logo_name_black.gif" id="logo" style="height: 45px; width: 211px;"
                         onmouseover="this.src='../img/max/logo_name_lightblue.gif'"
                         onmouseout="this.src='../img/max/logo_name_black.gif'"/></a></p>
             </section>
             <section id="contact"><h2><a href="#contact">Contact</a></h2>
-                <p>Telephone: +43 (0)6245 71 990</p>
-                <p>Fax: +43 (0)6245 70 79 366</p>
-                <p>E-Mail: info@revolutionevent.com</p>
+                <p style="font-family: elfFont">Telephone: +43 (0)6245 71 990</p>
+                <p style="font-family: elfFont">Fax: +43 (0)6245 70 79 366</p>
+                <p style="font-family: elfFont">E-Mail: info@revolutionevent.com</p>
             </section>
             <section id="partner">
                 <h2><a href="#partner">Offical Partners</a></h2>
