--- a/sites/djs/alesso.html
+++ b/sites/djs/alesso.html
@@ -27,7 +27,7 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
@@ -35,6 +35,26 @@
 
 
     <div><img src="../../img/djs/alesso_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://alessoworld.com/home/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+
+        <span><a href="https://www.facebook.com/AlessoOfficial"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+
+       <span><a href="https://soundcloud.com/alesso"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/AlessoOfficial"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
         Seine erste Produktion veröffentlichte Alesso 2010 mit den Songs Think It's Time, Workaholic,
         Moma und Loose It. Schließlich wurde er von Sebastian Ingrossos Label Refune Records unter Vertrag
