--- a/sites/djs/aoki.html
+++ b/sites/djs/aoki.html
@@ -27,13 +27,33 @@
 
 <div id="everything" class="content-info" style="padding: 5px">
 
-    <a href="#" class="js">
+    <a href="" class="js">
         <div class="header_div" onclick="history.go(-1);return true;">
             <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back">
         </div>
     </a>
 
     <div><img src="../../img/djs/aoki_main.jpg" class="img-responsive"></div>
+    <div class="artist_social">
+        <span><a href="http://steveaoki.com/"><img src="../../img/social/home.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/home_hover.gif'"
+            onmouseout="this.src='../../img/social/home.gif'"/></a>
+        </span>
+
+        <span><a href="https://www.facebook.com/Steve.Aoki"><img src="../../img/social/facebookW.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/facebook_hover.gif'"
+            onmouseout="this.src='../../img/social/facebookW.gif'"/></a>
+        </span>
+
+       <span><a href="https://soundcloud.com/steveaoki"><img src="../../img/social/soundcloud.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
+            onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
+        </span>
+        <span><a href="https://www.youtube.com/user/steveaokiofficial"><img src="../../img/social/youtubeS.gif" class="artist_soc_btn"
+            onmouseover="this.src='../../img/social/youtubeS_hover.gif'"
+            onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
+        </span>
+    </div>
     <div class="artist_home">Steve Aoki stammt aus den USA und hat
         sich dem Genre Electro/Indie verschrieben. Bereits in seiner Zeit an der
         University of California gründete er sein eigenes Plattenlabel DIM MAK Records.
